# autograd_cpp

./: .gitignore  CMakeLists.txt  README.md  makefile  node.h  node.hpp
.old/: CMakeLists.txt  readme.txt
include/: lin_alg_dtype.hpp  node.hpp
include/.old/: node.hpp.old
include/autograd/: node.hpp  value.hpp
src/: main.cpp
tests/: value_test.cpp
